// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots planner-pc/MonthlyView/parts/DateCell/locale Saturday 1`] = `
<div
  className="DataCellLocalestory__Box-sc-xdzbtm-0 gCaqrW"
>
  <div
    className="DailySummaryTriggerButton-sc-1siynpt-0 hUCrsk DateCell__Block-sc-622kyw-0 eWfOPu"
    data-testid="20190921"
    onClick={[Function]}
  >
    <span
      className="Text-sc-11kuzx6-0 DateCell__TextDate-sc-622kyw-1 bqmfRR iTrtHY"
      onClick={[Function]}
      size="medium"
    >
      21
    </span>
  </div>
</div>
`;

exports[`Storyshots planner-pc/MonthlyView/parts/DateCell/locale Start Date of Month 1`] = `
<div
  className="DataCellLocalestory__Box-sc-xdzbtm-0 gCaqrW"
>
  <div
    className="DailySummaryTriggerButton-sc-1siynpt-0 hUCrsk DateCell__Block-sc-622kyw-0 dNsRRi"
    data-testid="20191101"
    onClick={[Function]}
  >
    <span
      className="Text-sc-11kuzx6-0 DateCell__TextDate-sc-622kyw-1 bqmfRR cXmowY"
      onClick={[Function]}
      size="medium"
    >
      1 Nov
    </span>
  </div>
</div>
`;

exports[`Storyshots planner-pc/MonthlyView/parts/DateCell/locale Sunday 1`] = `
<div
  className="DataCellLocalestory__Box-sc-xdzbtm-0 gCaqrW"
>
  <div
    className="DailySummaryTriggerButton-sc-1siynpt-0 hUCrsk DateCell__Block-sc-622kyw-0 fNOyrI"
    data-testid="20190908"
    onClick={[Function]}
  >
    <span
      className="Text-sc-11kuzx6-0 DateCell__TextDate-sc-622kyw-1 bqmfRR hDNKii"
      onClick={[Function]}
      size="medium"
    >
      8
    </span>
  </div>
</div>
`;

exports[`Storyshots planner-pc/MonthlyView/parts/DateCell/locale Today 1`] = `
<div
  className="DataCellLocalestory__Box-sc-xdzbtm-0 gCaqrW"
>
  <div
    className="DailySummaryTriggerButton-sc-1siynpt-0 hUCrsk DateCell__Block-sc-622kyw-0 jVDqpM"
    data-testid="20190915"
    onClick={[Function]}
  >
    <span
      className="Text-sc-11kuzx6-0 DateCell__TextDate-sc-622kyw-1 bqmfRR hYNmFa"
      onClick={[Function]}
      size="medium"
    >
      15
    </span>
  </div>
</div>
`;

exports[`Storyshots planner-pc/MonthlyView/parts/DateCell/locale default 1`] = `
<div
  className="DataCellLocalestory__Box-sc-xdzbtm-0 gCaqrW"
>
  <div
    className="DailySummaryTriggerButton-sc-1siynpt-0 hUCrsk DateCell__Block-sc-622kyw-0 dNsRRi"
    data-testid="20190904"
    onClick={[Function]}
  >
    <span
      className="Text-sc-11kuzx6-0 DateCell__TextDate-sc-622kyw-1 bqmfRR cXmowY"
      onClick={[Function]}
      size="medium"
    >
      4
    </span>
  </div>
</div>
`;
